	- Add UseArrowKeysForTurning property for setting whether to use ArrowKeys for turning.
	- *UseArrayKeysForTurning is only used if outside (HeadingTolerance / 2) but inside HeadingTolerance
	- *FaceHeading is still used if outside HeadingTolerance
	- Add CallingConvention.Cdecl to all imports. No more PInvokeStackImbalance warnings when running in the debugger.
	- Bump to 1.3.1.8, recompiled DLL.

Version 1.3.1.7
	- Fix (possibly) cacheing issues with ParseResources.
	- Fix: Name of item is now stored in the cache with proper capitalization and won't harm the lookup either.
	- Benchmark: Tested ParseResources, 80s to load 974 items into the cache, 2.1s to use the exact same code again after cacheing.
	- Lower DistanceTolerance minimum to 0.25, testing indicates this is not too low of a number.
	- Add Synergy to CraftDetails and appropriate enum to Craft
	- Add Skill to CraftDetails (Craft enum)
	- Add a CraftRank enum
	- CraftDetails.Rank now returns a CraftRank enum.
	- Add a ToString() override for CraftDetails and a ToString(string) overload for 'special' formatting.
	- Add GetAllCraftDetails which will return a List<> of CraftDetails
	- Add a MagicOrCombat enum for SkillDetails to be used with determining skill type.
	- Add Skill and SkillType to SkillDetails for discerning if it's magic or combat enum
	- Add a ToString() override for SkillDetails and a ToString(string) overload for 'special' formatting.
	- Move IsSet internal functions to FFACETools.cs to make them easier to access from anywhere within the assembly.
	- Add GetFirstIndexByItemID(int ID, InventoryType location) will return the first index occuppied by item matching ID.
	- Add GetItemCountByIndex(int index, InventoryType location) will return number of items at index in location.
	- Add GetItemIDByIndex(int index, InventoryType location) will return Item ID in location at index.
	- Add GetItemCount(int iD, InventoryType location) will return total number of items matching ID in location.