@@ -4,6 +4,7 @@ Version 1.3.1.8
 	- *UseArrayKeysForTurning is only used if outside (HeadingTolerance / 2) but inside HeadingTolerance
 	- *FaceHeading is still used if outside HeadingTolerance
 	- Add CallingConvention.Cdecl to all imports. No more PInvokeStackImbalance warnings when running in the debugger.
+	- SelectedItemName uses ParseResources, but if for some reason that doesn't work, resorts to the old way.
 	- Bump to 1.3.1.8, recompiled DLL.
 
 Version 1.3.1.7
